--- a/pages/licensia.module.css
+++ b/pages/licensia.module.css
@@ -10,19 +10,20 @@
 .main {
     min-width: 100vw;
     min-height: 100vh;
-    background-color: rgb(100, 100, 100);
+    background-color: rgb(30, 30, 30);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .list {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(30, 30, 30);
     padding: 10px;
     max-width: 90vw;
     min-height: 50vh;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
+    color: aliceblue;
 }
 @media (min-width: 1000px) {
     .list {
@@ -32,6 +33,9 @@
 .title {
     font-weight: 700;
     margin: 0px auto;
+}
+.heroy {
+    color: rgb(192, 29, 187);
 }
 .titleMin {
     margin: 10px auto;
