--- a/pages/worldFuture/Name.module.css
+++ b/pages/worldFuture/Name.module.css
@@ -1,19 +1,21 @@
 .main {
     min-width: 100vw;
     min-height: 100vh;
-    background-color: rgb(100, 100, 100);
+    background-color: rgb(30, 30, 30);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .list {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(30, 30, 30);
     padding: 10px;
     max-width: 90vw;
     min-height: 50vh;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
+    color: aliceblue;
+    box-shadow: -5px -5px 15px rgba(192, 29, 187, 0.286);
 }
 @media (min-width: 1000px) {
     .list {
