--- a/pages/worldFuture/auth/auth.module.css
+++ b/pages/worldFuture/auth/auth.module.css
@@ -1,21 +1,23 @@
 .main {
     min-width: 100vw;
     min-height: 100vh;
-    background-color: rgb(100, 100, 100);
+    background-color: rgb(30, 30, 30);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .list {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(30, 30, 30);
     padding: 10px;
-    min-width: 70vw;
+    min-width: 60vw;
     max-width: 90vw;
     min-height: 50vh;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     position: relative;
+    color: aliceblue;
+    box-shadow: -5px -5px 15px rgba(192, 29, 187, 0.286);
 }
 @media (min-width: 1000px) {
     .list {
@@ -40,4 +42,43 @@
     top: 10px;
     right: 10px;
     padding: 5px;
+}
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height: 300px;
+    align-items: center;
+    margin: 20px 0px;
+}
+.textInput {
+    background-color: transparent;
+    color: aliceblue;
+    border-color: rgb(192, 29, 187);
+    border-radius: 5px;
+    height: 3rem;
+    padding: 0px 10px;
+}
+.saubmitButton {
+    background-color: rgb(192, 29, 187);
+    padding: 10px 15px;
+    border: 0px;
+    border-radius: 5px;
+    color: aliceblue;
+}
+.question {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0px;
+}
+.linkLogin {
+    margin-left: 5px;
+}
+.label {
+    display: block;
+    float: left;
+    width: 200px;
+    margin-bottom: 20px;
 }
