--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+    position: relative;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
         Helvetica Neue, sans-serif;
 }
@@ -13,4 +14,28 @@ a {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+.toast {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 100px;
+    color: aliceblue;
+}
+.errortoast {
+    background-color: rgba(255, 0, 98, 0.683);
+}
+.warningtoast {
+    background-color: rgba(255, 204, 0, 0.683);
+}
+.infotoast {
+    background-color: rgba(0, 136, 255, 0.683);
+}
+.successfultoast {
+    background-color: rgba(0, 255, 13, 0.683);
 }
